uses css grid to fix errors causing form to stretch

--- a/stocky-client/src/components/UserStocks/UserStockForm.css
+++ b/stocky-client/src/components/UserStocks/UserStockForm.css
@@ -1,3 +1,9 @@
+
+.user-stock-form {
+  display: grid;
+  grid-template-rows: 69px 62px 62px auto;
+}
+
 .user-stock-form .balance {
   font-size: 2.6rem;
 }
